# tichi

./: .autobump.config.yaml  .codecov.yml  .gitattributes  .gitignore  .gitpod.yml  .golangci.yml  .goreleaser.yml  .inner-prowjob.schema.json  .prow.yaml  .rerere.json  404.html  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  OWNERS  README.md  RELEASE.md  _navbar.md  _sidebar.md  components.html  components.md  go.mod  go.sum  index.html  introduction.html  plugins.html  pr-workflow.drawio  print.html  searchindex.js  searchindex.json  tools.html  workflows.html
.github/: dependabot.yml  renovate.json5  renovate.yaml  semantic.yml
cluster/: config.yaml  crier_deployment.yaml  crier_rbac.yaml  deck_deployment.yaml  deck_rbac.yaml  deck_service.yaml  ghproxy.yaml  hmac-token.yaml  hook_deployment.yaml  hook_rbac.yaml  hook_service.yaml  horologium_deployment.yaml  horologium_rbac.yaml  ing_ingress.yaml  minio.yaml  oauth-token.yaml  plank_deployment.yaml  plank_rbac.yaml  plugin.yaml  prow_controller_manager_deployment.yaml  prow_controller_manager_rbac.yaml  prowjob_customresourcedefinition.yaml  s3_secrets.yaml  sinker_deployment.yaml  sinker_rbac.yaml  statusreconciler_deployment.yaml  statusreconciler_rbac.yaml  ti_community_lgtm_deployment.yaml  tide_deployment.yaml  tide_rbac.yaml  tide_service.yaml
components/: rerere.html  rerere.md  tide.html  tide.md
config/: config.yaml  configs.yaml  external_plugins_config.yaml  plugin.yaml  plugins.yaml
docs/: README.md  _sidebar.md  book.toml  index.html  plugins.md  summary.md  workflows.md
en/: README.md  _sidebar.md  plugins.md
experiment/: README.md
experiment/label-dumpling/: .gitignore  Cargo.toml
experiment/label-dumpling/src/: main.rs
experiment/phony-rs/: Cargo.toml  README.md
experiment/phony-rs/src/: main.rs
experiment/phony-rs/static/: index.html
plugins/: assign.md  blunderbuss.html  blunderbuss.md  contribution.md  format-checker.md  hold.html  hold.md  issue-triage.md  label-blocker.md  label.html  label.md  lgtm.html  lgtm.md  merge.html  merge.md  needs-rebase.md  owners.html  (+7 more)
(+381 files in other folders)
