[package]
name = "label-dumpling"
version = "0.1.0"
authors = ["hi-rustin <rustin.liu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octocrab = "0.8"
clap = "3.0.0-beta.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
tokio = { version = "0.2.17", default-features = false, features = ["macros"] }
log = "0.4.0"
env_logger = "0.8.2"