[package]
name = "phony-rs"
version = "0.1.0"
authors = ["hi-rustin <rustin.liu@gmail.com>", "Chojan Shang <psiace@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
hmac = "0.10.1"
sha-1 = "0.9.2"
hex = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
pretty_env_logger = "0.4"
